[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawgame-agent-sdk"
version = "0.1.0"
description = "Python SDK for OpenClaw Battle MVP agent join/poll/act flow"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
